--- a/vars/Jenkinsfile
+++ b/vars/Jenkinsfile
@@ -32,6 +32,7 @@ pipeline {
         }
         stage('deploy'){
             steps{
+                sh "docker compose down"
                 script{
                     deploy()
                 }
